@@ -5,10 +5,11 @@ IFS=$'\n\t'
 # Run the Test Suite
 
 # accepts files with .x3d extension
-export PROCESSORS=${PROCESSORS-8}
 
 . ./classpath
 
-javac RunSaxon.java
+pushd ../java
+javac -proc:full net/coderextreme/RunSaxon.java
+popd
 
-ls *.x3d | xargs -P $PROCESSORS java RunSaxon ---overwrite | xargs -P $PROCESSORS ${NODE} json2py.js
+ls *.x3d | xargs -P $PROCESSORS java net.coderextreme.RunSaxon ---overwrite | xargs -P $PROCESSORS ${NODE} json2py.js
